# toy_renderer_update

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: config.json  cube2.ply
assets/SJTU_east_gate_MC/: East_Gate_Voxel.mtl
assets/shaders/: Blinn-Phong.frag  Blinn-Phong.vert  Blinn-Phong_v.frag  Blinn-Phong_v.vert  FirstTriangle.frag  FirstTriangle.vert  Texture.frag  Texture.vert  cube.vert  material.frag  material_v.frag  material_v.vert  vertexbuffer.frag  vertexbuffer.vert  wireframe_v.frag  wireframe_v.vert
src/: CMakeLists.txt  main.cpp  test.cpp  test2.cpp  test3.cpp
src/EasyVulkan/: CMakeLists.txt
src/EasyVulkan/include/EasyVulkan/: EasyVKStart.h  GlfwGeneral.hpp  VKBase+.h  VKBase.h  VKFormat.h  VkCommandBuffer.h  VkCommandPool.h  VkGraphicsBasePlus.h  VkResultT.h  VkUtil.h  easyVulkan.h
src/EasyVulkan/src/: GlfwGeneral.cpp  VKBase.cpp  easyVulkan.cpp
src/camera/: CMakeLists.txt  camera.cpp  camera.h  orthographic.h  perspective.h
src/camera/include/camera/: camera.h  orthographic.h  perspective.h
src/camera/src/: camera.cpp
src/render/: CMakeLists.txt  render.h  render_OpenGL.cpp  render_OpenGL.h
src/render/include/render/: render.h  render_OpenGL.h  render_Vulkan.h
src/render/src/: render_OpenGL.cpp  render_Vulkan.cpp
src/scene/: CMakeLists.txt  object.cpp  object.h  scene.cpp  scene.h
src/scene/include/scene/: object.h  scene.h
src/scene/src/: object.cpp  scene.cpp
src/shader/: CMakeLists.txt  shader.h  shaderOpenGL.cpp  shaderOpenGL.h
src/shader/include/shader/: shader.h  shaderOpenGL.h  shaderVulkan.h
src/shader/src/: shaderOpenGL.cpp  shaderVulkan.cpp
src/utils/: stb_image_impl.cpp
src/viewer/: CMakeLists.txt  viewer.cpp  viewer.h
src/viewer/include/viewer/: viewer.h
src/viewer/include/viewer/ui/: cameraUI.h  modelUI.h  renderUI.h  shaderUI.h  ui.h
src/viewer/src/: viewer.cpp
src/viewer/src/ui/: ui.cpp
src/viewer/ui/: modelUI.h  shaderUI.h  ui.cpp  ui.h
